--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI_Python
 
 # Controls when the workflow will run
 on:
@@ -26,11 +26,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
+      - name: Install Python
+        run: actions/setup-python@v5
+        with:
+          python-version: '3.12'  
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+        shell: bash
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: execute py script # run file
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          python my_file.py
