--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -36,4 +36,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: execute py script # run file
         run: |
-          python my_file.py
+          python psscripts/my_file.py
+          shell: bash
