--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -30,8 +30,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
+          architecture: 'x64'
+      - name: Display Python Version
+        run: python -c "import sys; print(sys.version)"
         shell: bash
       # Runs a set of commands using the runners shell
       - name: execute py script # run file
